infra/k8s/mail-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mail-depl
spec:
  replicas: 1
  selector: # letting deployment know what app should dealing with
    matchLabels:
      app: mail
  template: # specify exact configuration of the pod we want to deployment to create
    metadata:
      labels:
        app: mail
    spec:
      containers:
        - name: mail
          image: uniplanet/mail
          resources:
            limits:
              memory: 500Mi
              cpu: "500m"
            requests:
               memory: 500Mi
               cpu: "250m"
