infra/k8s/account-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-depl
spec:
  replicas: 1
  selector: # letting deployment know what app should dealing with
    matchLabels:
      app: account
  template: # specify exact configuration of the pod we want to deployment to create
    metadata:
      labels:
        app: account
    spec:
      containers:
        - name: account
          image: uniplanet/account
          resources:
            limits:
              memory: 250Mi
              cpu: "200m"
            requests:
               memory: 200Mi
               cpu: "150m"
---
apiVersion: v1
kind: Service
metadata:
  name: account-srv
spec: 
  selector:
    app: account
  ports:
    - name: account
      protocol: TCP
      port: 3002
      targetPort: 3002
