infra/k8s/account-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-mongo-depl
spec:
  replicas:  1
  selector:
    matchLabels:
      app: account-mongo
  template:
    metadata:
      labels:
        app: account-mongo
    spec:
      containers:
        - name: account-mongo
          image: mongo
          resources:
            limits:
              memory: 100Mi
              cpu: "200m"
            requests:
              memory: 50Mi
              cpu: "150m"
---
apiVersion: v1
kind: Service
metadata:
  name: account-mongo-srv
spec:
  selector:
    app: account-mongo
  ports:
    - name: account-db
      protocol: TCP 
      port: 27017
      targetPort: 27017
