infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec:
  replicas: 1
  selector: # letting deployment know what app should dealing with
    matchLabels:
      app: auth
  template: # specify exact configuration of the pod we want to deployment to create
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: uniplanet/auth
          resources:
            limits:
              memory: 500Mi
              cpu: "200m"
            requests:
               memory: 500Mi
               cpu: "150m"
---
apiVersion: v1
kind: Service
metadata:
  name: auth-srv
spec:
  selector:
    app: auth
  ports:
    - name: auth
      protocol: TCP
      port: 3000
      targetPort: 3000
