infra/k8s/auth-redis-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-redis-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-redis
  template:
    metadata:
      labels:
        app: auth-redis
    spec:
      containers:
        - name: auth-redis
          image: redis
          resources:
            limits:
              memory: 128Mi
              cpu: "100m"
            requests:
              memory: 64Mi
              cpu: "50m"
---
apiVersion: v1
kind: Service
metadata:
  name: auth-redis-srv
spec:
  selector:
    app: auth-redis
  ports:
    - name: db
      protocol: TCP
      port: 6379
      targetPort: 6379
