infra/k8s/chat-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-depl
spec:
  replicas: 1
  selector: # letting deployment know what app should dealing with
    matchLabels:
      app: chat
  template: # specify exact configuration of the pod we want to deployment to create
    metadata:
      labels:
        app: chat
    spec:
      containers:
        - name: chat
          image: uniplanet/chat
          resources:
            limits:
              memory: 250Mi
              cpu: "200m"
            requests:
               memory: 200Mi
               cpu: "150m"
---
apiVersion: v1
kind: Service
metadata:
  name: chat-srv
spec: 
  selector:
    app: chat
  ports:
    - name: chat
      protocol: TCP
      port: 3003
      targetPort: 3003
