infra/k8s/message-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: message-depl
spec:
  replicas: 1
  selector: # letting deployment know what app should dealing with
    matchLabels:
      app: message
  template: # specify exact configuration of the pod we want to deployment to create
    metadata:
      labels:
        app: message
    spec:
      containers:
        - name: message
          image: uniplanet/message
          resources:
            limits:
              memory: 500Mi
              cpu: "200m"
            requests:
               memory: 200Mi
               cpu: "150m"
---
apiVersion: v1
kind: Service
metadata:
  name: message-srv
spec: 
  selector:
    app: message
  ports:
    - name: message
      protocol: TCP
      port: 3004
      targetPort: 3004
