infra/k8s/products-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-depl
spec:
  replicas: 1
  selector: # letting deployment know what app should dealing with
    matchLabels:
      app: products
  template: # specify exact configuration of the pod we want to deployment to create
    metadata:
      labels:
        app: products
    spec:
      containers:
        - name: products
          image: uniplanet/products
          resources:
            limits:
              memory: 250Mi
              cpu: "200m"
            requests:
              memory: 200Mi
              cpu: "150m"
---
apiVersion: v1
kind: Service
metadata:
  name: products-srv
spec:
  selector:
    app: products
  ports:
    - name: products
      protocol: TCP
      port: 3001
      targetPort: 3001
