infra/k8s/products-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: products-mongo
  template:
    metadata:
      labels:
        app: products-mongo
    spec:
      containers:
        - name: products-mongo
          image: mongo
          resources:
            limits:
              memory: 128Mi
              cpu: "100m"
            requests:
              memory: 64Mi
              cpu: "50m"
---
apiVersion: v1
kind: Service
metadata:
  name: products-mongo-srv
spec:
  selector:
    app: products-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
