infra/k8s/user-redis-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-redis-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-redis
  template:
    metadata:
      labels:
        app: user-redis
    spec:
      containers:
        - name: user-redis
          image: redis
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.2"
---
apiVersion: v1
kind: Service
metadata:
  name: user-redis-srv
spec:
  selector:
    app: user-redis
  ports:
    - name: db
      protocol: TCP
      port: 6379
      targetPort: 6379
