infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    # - host: localhost
    - host: auth.uniplanet.shop
      http:
        paths:
          - path: /api/auth/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
    # - host: localhost
    - host: products.uniplanet.shop
      http:
        paths:
          - path: /api/products/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: products-srv
                port:
                  number: 3001
